candidate security filter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5433/gestao_vagas
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
-security.token.secret=voce@nunca_vai#descobrir-o+segredo
+security.token.secret.company=voce@nunca_vai#descobrir-o+segredo
+security.token.secret.candidate=voce@nunca_vai#descobrir-o+segredo2
